force-app/main/default/objects/Maintenance_Request__c/fields/Date_of_Last_Communication__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Communication__c</fullName>
    <label>Date of Last Communication</label>
    <type>Date</type>
</CustomField>