force-app/main/default/objects/Maintenance_Request__c/fields/Date_Time_of_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Maintenance__c</fullName>
    <label>Date &amp; Time of Maintenance</label>
    <type>DateTime</type>
</CustomField>