force-app/main/default/objects/Maintenance_Request__c/fields/Days_to_Resolve_Issue__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Resolve_Issue__c</fullName>
    <formula>LastModifiedDate -  CreatedDate</formula>
    <label>Days to Resolve Issue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>