force-app/main/default/objects/Maintenance_Request__c/fields/Description_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Issue__c</fullName>
    <inlineHelpText>Please include all relevant details</inlineHelpText>
    <label>Description of Issue</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>