force-app/main/default/objects/Maintenance_Request__c/fields/Duration_on_Site__c.field-meta.xml
<CustomField>
    <fullName>Duration_on_Site__c</fullName>
    <label>Duration on Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>