force-app/main/default/objects/Maintenance_Request__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <inlineHelpText>After request was completed</inlineHelpText>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>