force-app/main/default/objects/Maintenance_Request__c/fields/Has_the_Supervisor_Been_Notified__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Supervisor_Been_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has the Supervisor Been Notified?</label>
    <type>Checkbox</type>
</CustomField>