force-app/main/default/objects/Maintenance_Request__c/fields/Is_Product_Under_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Under_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Product Under Warranty?</label>
    <type>Checkbox</type>
</CustomField>