force-app/main/default/objects/Maintenance_Request__c/fields/Machine_Part__c.field-meta.xml
<CustomField>
    <fullName>Machine_Part__c</fullName>
    <label>Machine Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>