force-app/main/default/objects/Maintenance_Request__c/fields/Maintenance_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Requested_By__c</fullName>
    <label>Maintenance Requested By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Front_Desk_Staff</valueSetName>
    </valueSet>
</CustomField>