force-app/main/default/objects/Maintenance_Request__c/fields/Make_and_Model__c.field-meta.xml
<CustomField>
    <fullName>Make_and_Model__c</fullName>
    <label>Make and Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>