force-app/main/default/objects/Maintenance_Request__c/fields/Office_Email__c.field-meta.xml
<CustomField>
    <fullName>Office_Email__c</fullName>
    <label>Office Email</label>
    <type>Email</type>
</CustomField>