force-app/main/default/objects/Maintenance_Request__c/fields/Parts_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_Delivery_Date__c</fullName>
    <label>Parts Delivery Date</label>
    <type>Date</type>
</CustomField>