force-app/main/default/objects/Maintenance_Request__c/fields/Parts_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_Ordered_Date__c</fullName>
    <label>Parts Ordered Date</label>
    <type>Date</type>
</CustomField>