force-app/main/default/objects/Maintenance_Request__c/fields/Preferred_Date_for_Repair__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_for_Repair__c</fullName>
    <label>Preferred Date for Repair</label>
    <type>Date</type>
</CustomField>