force-app/main/default/objects/Maintenance_Request__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Maintenance_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>