force-app/main/default/objects/Maintenance_Request__c/fields/Technician_Performing_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Technician_Performing_Maintenance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician Performing Maintenance</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Maintenance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>