force-app/main/default/objects/Maintenance_Request__c/fields/Where_is_the_Issue__c.field-meta.xml
<CustomField>
    <fullName>Where_is_the_Issue__c</fullName>
    <inlineHelpText>Be as specific as possible</inlineHelpText>
    <label>Where is the Issue?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>